WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62932
FrameSelection::modify should take verticalDisplacement instead of verticalDistance
https://bugs.webkit.org/show_bug.cgi?id=62932
Summary
FrameSelection::modify should take verticalDisplacement instead of verticalDi...
Ryosuke Niwa
Reported
2011-06-18 11:13:23 PDT
A distance is the magnitude of a displacement. We shouldn't be using these terms interchangeably.
Attachments
renamed the argument
(3.20 KB, patch)
2011-06-20 09:58 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
added VerticalDirection enum
(8.92 KB, patch)
2011-06-20 10:31 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-06-20 09:58:32 PDT
Created
attachment 97816
[details]
renamed the argument
Ryosuke Niwa
Comment 2
2011-06-20 10:03:30 PDT
Comment on
attachment 97816
[details]
renamed the argument On my second thought, it's probably cleaner to add VerticalDirection enum because callers compute distance and then pass distance or -distance depending.
Ryosuke Niwa
Comment 3
2011-06-20 10:31:49 PDT
Created
attachment 97822
[details]
added VerticalDirection enum
WebKit Review Bot
Comment 4
2011-06-20 11:29:01 PDT
Comment on
attachment 97822
[details]
added VerticalDirection enum Clearing flags on attachment: 97822 Committed
r89263
: <
http://trac.webkit.org/changeset/89263
>
WebKit Review Bot
Comment 5
2011-06-20 11:29:06 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6
2011-06-20 11:33:51 PDT
Thanks for the review, Ojan. More bool shaving patches are coming!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug